# task3

./: CMakeLists.txt  Main.qml  Track.h  apptask3_by.qm  apptask3_by.ts  apptask3_en.ts  apptask3_ru.qm  apptask3_ru.ts  main.cpp  playercontroller.cpp  playercontroller.h  tst_player.cpp
.github/workflows/: main.yml
